<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_ctall_bringup</name>
  <version>0.0.0</version>
  <description>turtle_catch_them_all_bringup_packages</description>
  <maintainer email="jishnusurajila@gmail.com">jishnu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>turtlesim_ctall</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>